lib-parser: implement LogData and LogDataParser

--- a/lib-parser/pom.xml
+++ b/lib-parser/pom.xml
@@ -17,6 +17,11 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>net.sf.kdgcommons</groupId>
+            <artifactId>kdgcommons</artifactId>
+            <version>${net.sf.kdgcommons.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
