rewrite old log analyzer to use new lib-parser classes

--- a/app-summary/pom.xml
+++ b/app-summary/pom.xml
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>com.technique.tools.elb_log_analyzer</groupId>
-            <artifactId>lib-parser</artifactId>
+            <artifactId>lib-common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
