--- a/lib-common/pom.xml
+++ b/lib-common/pom.xml
@@ -8,11 +8,11 @@
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>lib-parser</artifactId>
+    <artifactId>lib-common</artifactId>
     <packaging>jar</packaging>
 
     <description>
-        Parses ELB access logs and provides a callback function for each line.
+        Common utility classes, including a log parser.
     </description>
 
 
